# project-x-webapi

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/database/: mod.rs
src/schema/: cpu.rs  mod.rs  price.rs  root.rs
src/server/: mod.rs  routes.rs
