[package]
name = "project-x-webapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = { version = "0.3.3" }
tokio = { version = "1.21.2", features = ["full"] }
async-graphql = { version = "4.0.16" }
async-graphql-warp = { version = "4.0.16" }
serde_json = { version  = "1.0.87" }
