[package]
name = "project-x-webapi"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
serde_json = { version  = "1.0.87" }
serde = { version  = "1.0.147", features = ["derive"] }
axum = { version = "0.5.17" }
tracing = { version =  "0.1.37" }
tracing-subscriber = { version = "0.3.16" }